Added github link in report

--- a/report.tex
+++ b/report.tex
@@ -2,13 +2,17 @@
 \usepackage{amsmath, graphicx, hyperref, listings, float, caption, geometry}
 \geometry{margin=1in}
 
-\title{AMS 595 - Assignment 4: Fractal Approximation}
+\title{AMS 595 - Assignment 4: \textbf{Fractal Approximation}}
 \author{Amol Arora, SBUID: 116491705}
 \date{\today}
 
 \begin{document}
 
 \maketitle
+
+\section{Github Link}
+\underline{All project files are uploaded here}:
+\url{https://github.com/amol1202/AMS595_Assignment4}
 
 \section{Introduction}
 This project involves implementing three computational tasks in Python: generating the Mandelbrot set, simulating a Markov chain, and approximating functions using Taylor series expansions. The primary objectives are to explore fractal generation, observe long-term behavior in stochastic systems, and approximate complex functions using polynomial expansions. Each task leverages different mathematical concepts, reinforcing practical programming skills and analytical techniques.
